# plex-pipe

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml  test_and_deploy.yaml
analysis_steps/: index.html
analysis_steps/00_steps_overview/: index.html
analysis_steps/01_roi_definition/: index.html
analysis_steps/02_roi_cutting/: index.html
analysis_steps/03_quality_control/: index.html
analysis_steps/04_image_processing/: index.html
analysis_steps/05_quantification/: index.html
api/: index.html
configuration/channel-selection/: index.html
configuration/config_overview/: index.html
configuration/processors/: index.html
configuration/reference/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/analysis_steps/00_steps_overview/: index.html
dev/analysis_steps/01_roi_definition/: index.html
dev/analysis_steps/02_roi_cutting/: index.html
dev/analysis_steps/03_quality_control/: index.html
dev/analysis_steps/04_image_processing/: index.html
dev/analysis_steps/05_quantification/: index.html
dev/api/: index.html
dev/configuration/channel-selection/: index.html
dev/configuration/config_overview/: index.html
dev/configuration/reference/: index.html
dev/includes/execution_snippet/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/usage/execution_modes/: index.html
dev/usage/globus/: index.html
dev/usage/input_data/: index.html
dev/usage/installation/: index.html
dev/usage/processors/: index.html
dev/usage/sam2_wsl_setup/: index.html
docs/: analysis_steps.md  api.md  hooks.py  index.md  what_is_plexpipe.md
docs/analysis_steps/: 00_steps_overview.md  01_core_definition.md  01_roi_definition.md  02_core_cutting.md  02_roi_cutting.md  03_quality_control.md  04_image_processing.md  05_quantification.md
docs/configuration/: channel-selection.md  config_overview.md  core-cutting.md  index.md  processors.md  reference.md
docs/includes/: execution_snippet.md
docs/usage/: execution_modes.md  globus.md  input_data.md  installation.md  processors.md  sam2_wsl_setup.md
examples/: analysis_settings_example.yaml  example_globus_config.yaml  example_pipeline_config.yaml  example_pipeline_config_globus.yaml  example_pipeline_config_remote.yaml  example_sam_config.yaml  pipeline_settings_example.yaml
examples/output/sample_analysis/: rois.csv  rois.pkl
includes/execution_snippet/: index.html
notebooks/: 01_core_definition_demo.ipynb  01_roi_definition_demo.ipynb  02_core_cutting_demo.ipynb  02_roi_cutting_demo.ipynb  03_QC_demo.ipynb  03_annotate_demo.ipynb  04_quantification_demo.ipynb  04_segmentation_demo.ipynb  05_quantification_demo.ipynb  globus_demo copy.ipynb  masks.pkl
notebooks/extras/: 00_prepare_remote_analysis_optional.ipynb  01_core_cutting_globus_demo.ipynb  01a_prepare_remote_analysis.ipynb  02_roi_cutting_globus_demo.ipynb  06_QC_after_quant_demo.ipynb  06_add_QC_after_quantification.ipynb  cellpose_demo.ipynb  cut_sample.ipynb  globus_demo.ipynb  globus_transfer_demo.ipynb  instanseg_demo.ipynb  instanseg_tests.ipynb  viewer_demo.ipynb
scripts/: 02_cut_rois.py  04_quantify.py  04_segment.py  05_quantify.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/analysis_steps/: index.html
site/api/: index.html
site/configuration/: index.html
site/configuration/channel-selection/: index.html
site/configuration/config_overview/: index.html
site/configuration/core-cutting/: index.html
site/configuration/processors/: index.html
site/configuration/reference/: index.html
site/search/: search_index.json
site/usage/: index.html
site/usage/analysis_steps/: index.html
site/usage/execution_modes/: index.html
site/usage/globus/: index.html
site/usage/input_data/: index.html
site/usage/installation/: index.html
site/usage/processors/: index.html
site/what_is_plexpipe/: index.html
src/plex_pipe/: __init__.py  _version.py  datasets.py
src/plex_pipe/_dev_tools/: docs_generator.py
src/plex_pipe/config/: config_loaders.py  config_migrations.py  config_schema.py
src/plex_pipe/core_cutting/: __init__.py  assembler.py  channel_scanner.py  controller.py  cutter.py  file_io.py  input_strategy.py
src/plex_pipe/core_definition/: roi_utils.py  suggest_cores.py  viewer_utils.py
src/plex_pipe/image/: utils.py
src/plex_pipe/io/: __init__.py  filesystem.py  globus.py
src/plex_pipe/object_quantification/: __init__.py  controller.py  metrics.py  qc_shape_masker.py
src/plex_pipe/ops/: __init__.py  base.py  image_enhancers.py  mask_builders.py  object_segmenters.py  registry.py
src/plex_pipe/processors/: __init__.py  base.py  controller.py  image_enhancers.py  image_filters.py  mask_builders.py  object_segmenters.py  registry.py
src/plex_pipe/stages/quantification/: __init__.py  controller.py  metrics.py  (+1 more)
src/plex_pipe/ui/: __init__.py  qc_widget.py  roi_widget.py  viewer_utils.py
src/plex_pipe/utils/: __init__.py  config_loaders.py  config_schema.py  docs_generator.py  globus_utils.py  im_utils.py
src/plex_pipe/widgets/: __init__.py  roi_widget.py  viewer_utils.py
stylesheets/: extra.css
tests/: test_assembler.py  test_base_processor.py  test_channel_scanner.py  test_config_loading.py  test_config_migrations.py  test_cutting.py  test_cutting_control.py  test_datasets.py  test_file_utils.py  test_globus_specific.py  test_im_utils.py  test_image_filters.py  test_input_strategy.py  test_mask_builders.py  test_processors.py  test_qc_masking.py  test_quantification.py  test_roi_utils.py  test_schema.py  test_segmenters.py  test_viewer_utils.py
tests/example_data/: legacy_config_v0.yaml
usage/analysis_steps/: index.html
usage/execution_modes/: index.html
usage/globus/: index.html
usage/input_data/: index.html
usage/installation/: index.html
usage/processors/: index.html
usage/sam2_wsl_setup/: index.html
what_is_plexpipe/: index.html
(+7 files in other folders)
