# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# =============================================================================
# PROJECT METADATA
# =============================================================================
[project]
name = "plex_pipe"
requires-python = ">=3.11"
dynamic = ["version"]
description = "A pipeline for analyzing multiplexed data."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Kasia Kedziora", email = "kedziorak@psc.edu" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

# =============================================================================
# DEPENDENCIES
# =============================================================================

dependencies = [
    "anndata>=0.11.4",
    "dask[array]>=2024.4",
    "imagecodecs>=2024.6.1",
    "loguru>=0.7.3",
    "numpy>=2.0",
    "opencv-python>=4.9",
    "pandas>=2.1",
    "pydantic>=2.7.6",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24",
    "scipy>=1.11",
    "shapely>=2.0",
    "spatialdata>0.7",
    "tifffile>=2024.7.2",
    "zarr>3.0",
    "fsspec>=2024.6.1",
    "dearrayer>=0.1.0",
]

[project.optional-dependencies]
jupyter = [
    "ipykernel>=6.0",
    "ipywidgets>=8.1.8",
]
globus = [
    "globus-sdk>= 3.59.0",
]
segmentation-default = [
    "torch",
    "torchvision",
    "cellpose>=4.0",
    "instanseg-torch>=0.0.9",
]
segmentation-cuda = [
    "torch",
    "torchvision",
    "cellpose>=4.0",
    "instanseg-torch>=0.0.9",
]
gui = [
    "qtpy>=2.4.0",
    "PySide6>=6.7",
    "napari>=0.6.6",
    "napari-spatialdata>0.5.7",
]
all-default = [
    "plex_pipe[jupyter,globus,gui,segmentation-default]"
]
all-cuda = [
    "plex_pipe[jupyter,globus,gui,segmentation-cuda]"
]

[dependency-groups]
# Shared dev tooling (no torch/project extras here so it stays platform-neutral).
dev = [
    "black>=23.3.0",
    "ruff>=0.0.241",
    "tox>=4.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-macros-plugin>=1.5.0",
    "pre-commit>=3.6.0",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
]
# Full dev env on a machine without an NVIDIA GPU (Mac, laptop, CI): uv sync --group all-dev-default
all-dev-default = [
    { include-group = "dev" },
    "plex_pipe[all-default]",
]
# Full dev env on an NVIDIA/CUDA machine (HPC, Windows GPU box): uv sync --group all-dev-cuda
all-dev-cuda = [
    { include-group = "dev" },
    "plex_pipe[all-cuda]",
]

# =============================================================================
# UV CONFIGURATION
# =============================================================================

[tool.uv]
# segmentation-default (standard PyTorch build) and segmentation-cuda (CUDA build)
# install different torch wheels, so they must never resolve together. Declaring
# them conflicting lets uv resolve a separate torch for each instead of
# collapsing to one build.
conflicts = [
    [{ extra = "segmentation-default" }, { extra = "segmentation-cuda" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# torch / torchvision source routing:
#   - cuda extra on Linux/Windows    -> CUDA (cu126) wheels
#   - default extra on Linux/Windows -> CPU-only wheels
#   - macOS (any)                    -> falls through to plain PyPI (arm64
#     CPU + MPS build); CUDA does not exist on Apple Silicon, so no pytorch
#     index applies there.
[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", extra = "segmentation-cuda", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", extra = "segmentation-default", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cuda", extra = "segmentation-cuda", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", extra = "segmentation-default", marker = "sys_platform != 'darwin'" },
]

# =============================================================================
# TOOL CONFIGURATION
# =============================================================================
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/plex_pipe/_version.py"

[tool.black]
line-length = 79
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "NPY", # numpy types
    "ARG", # unused arguments
    "PT", # pytest style
    "PD", # pandas vet
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "SIM117", # flake8-simplify
    "PD901", # Allow the variable name 'df'
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
    "*.ipynb",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.10"

mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "plex_pipe._version",
]
ignore_errors = true
